# po-app

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  alembic.ini  argocd-basic.yaml  deploy.sh  install.sh  main.py  po_conditioning_backend_app_start.sh  pyproject.toml
.github/workflows/: ec2cicd.yaml  main.yaml
Helm/po-demo/: Chart.yaml  values.yaml
K8s/: db-secret.yaml  deployment.yaml  service.yaml
apps/admin/: router.py  schemas.py
apps/ai/: router.py  schemas.py  service.py
apps/ai_engine/: README.md  interface.py  model_config.py  service.py  utils.py  visual_grounding.ipynb
apps/categories/: router.py  schemas.py  service.py
apps/download/: router.py  schemas.py  service.py
apps/extraction/: router.py  schemas.py  service.py
apps/fields/: router.py  schemas.py  service.py
apps/flags/: router.py  schemas.py
apps/pos/: router.py  schemas.py  service.py
apps/protected/: router.py  service.py
apps/responses/: router.py  schemas.py
apps/storage/: router.py  schemas.py  service.py
common/: hashing.py  jwt.py  pagination.py  responses.py
constants/: roles.py  statuses.py
email_services/: email_client.py  render.py
migrations/: env.py
models/: base.py  category.py  extraction.py  field.py  field_response.py  field_response_comment.py  field_response_edit.py  field_response_issue.py  po_update_flag.py  purchase_order.py  user.py  vendor.py
po-app1/: Chart.yaml  values.yaml
security/: auth_backend.py  password_rules.py
settings/: config.py
source/: deploy_ec2.sh
tests/: ai_tests.py
utils/: logging.py
(+42 files in other folders)
